--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URI = https://washmyt-backend.vercel.app/
+REACT_APP_API_URI = https://washmyt-backend.vercel.app
 # REACT_APP_API_URI = http://localhost:4000
 # REACT_APP_STRIPE_SECRET = pk_test_6pRNASCoBOKtIshFeQd4XMUh
